# fiume

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml  flake.nix  init.sql
api/: .gitignore  Cargo.toml  Dockerfile
api/src/: database.rs  errors.rs  lisp.rs  main.rs  parsing.rs
api/src/api/: account.rs  mod.rs  register.rs  search.rs  state.rs
api/src/sql/: login.sql  register.sql  update_session_id.sql
app/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
app/components/: Card.vue  CardGrid.vue  Navbar.vue  Player.vue
app/components/cards/: CardButton.vue  CardImage.vue
app/layouts/: default.vue
app/pages/: index.vue  search.vue
app/pages/search/: [source].vue
app/pages/state/[source]/: [state].vue
app/public/: global.sass
app/utils/: index.ts
